<resources>
    <string name="app_name">OrderingApp</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="no_barcode">No Barcode</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="button_undo">Undo</string>
    <string name="enter_barcode">Enter barcode manually</string>

    <string name="business_type_label">Business Type</string>
    <string name="business_area_label">Business Area</string>
    <string name="warehouse_label">Warehouse</string>
    <string name="cost_center_label">Cost Center</string>
    <string name="customer_segment_label">Customer Segment</string>

    <string name="business_area_label_after_sales">After sales</string>
    <string name="business_area_label_inter_company">Inter company</string>
    <string name="business_area_label_new_build">New build</string>

    <string name="pref_business_area_after_sales" translatable="false">AFT</string>
    <string name="pref_business_area_inter_company" translatable="false">IC</string>
    <string name="pref_business_area_new_build" translatable="false">NEW</string>

    <string name="warehouse_label_turku">Turku</string>
    <string name="warehouse_label_hameenlinna">Hämeenlinna</string>
    <string name="warehouse_label_jamsa">Jämsä</string>
    <string name="warehouse_label_hameenlinna_tuotanto">Hämeenlinna tuotanto</string>
    <string name="warehouse_label_raisio">Raisio HIAB</string>

    <string name="pref_warehouse_turku" translatable="false">TKU</string>
    <string name="pref_warehouse_hameenlinna" translatable="false">HMY</string>
    <string name="pref_warehouse_jamsa" translatable="false">JMS</string>
    <string name="pref_warehouse_hameenlinna_tuotanto" translatable="false">HMYProd</string>
    <string name="pref_warehouse_raisio" translatable="false">Raisio</string>

    <string name="cost_center_label_hameenlinna">Hämeenlinna</string>
    <string name="cost_center_label_jamsa">Jämsä</string>
    <string name="cost_center_label_turku">Turku</string>

    <string name="pref_cost_center_hamenelinna" translatable="false">1010</string>
    <string name="pref_cost_center_jamsa" translatable="false">2010</string>
    <string name="pref_cost_center_turku" translatable="false">3010</string>

    <string name="business_type_label_product_business">Product Business</string>
    <string name="business_type_label_services_business">Services Business</string>
    <string name="business_type_label_systems_business">Systems Business</string>

    <string name="pref_business_type_product_business" translatable="false">PROD</string>
    <string name="pref_business_type_services_business" translatable="false">SERV</string>
    <string name="pref_business_type_systems_business" translatable="false">SYST</string>

    <string name="customer_segment_label_distributors">Distributors</string>
    <string name="customer_segment_label_hydraulic_oems">Hydraulic OEMs</string>
    <string name="customer_segment_label_intercompany">Intercompany</string>
    <string name="customer_segment_label_marine">Marine</string>
    <string name="customer_segment_label_metal_mining">Metal and Mining</string>
    <string name="customer_segment_label_mobile_equipment">Mobile equipment</string>
    <string name="customer_segment_label_offshore">Offshore</string>
    <string name="customer_segment_label_other">Other land-based</string>
    <string name="customer_segment_label_pulp_paper_forest">Pulp, Paper and Forest industry</string>
    <string name="customer_segment_label_testing">Testing industry</string>

    <string name="pref_customer_segment_distributors" translatable="false">Distrib</string>
    <string name="pref_customer_segment_hydraulic_oems" translatable="false">Hydr</string>
    <string name="pref_customer_segment_intercompany" translatable="false">IC</string>
    <string name="pref_cusotmer_segment_marine" translatable="false">Marine</string>
    <string name="pref_customer_segment_metal_mining" translatable="false">MetMin</string>
    <string name="pref_customer_segment_mobile_equipment" translatable="false">MobileEq</string>
    <string name="pref_customer_segment_offshore" translatable="false">Offshore</string>
    <string name="pref_customer_segment_other" translatable="false">OthLB</string>
    <string name="pref_customer_segment_pulp_paper_forest" translatable="false">PPF</string>
    <string name="pref_customer_segment_testing" translatable="false">Testing</string>

    <string name="pref_cost_center_key" translatable="false">cost</string>
    <string name="pref_warehouse_key" translatable="false">location</string>
    <string name="pref_business_area_key" translatable="false">units</string>
    <string name="pref_business_type_key" translatable="false">type</string>
    <string name="pref_customer_segment_key" translatable="false">customer</string>

</resources>
